force-app/main/default/objects/Knowledge__kav/fields/Custom_Detail_Link__c.field-meta.xml
<CustomField>
    <fullName>Custom_Detail_Link__c</fullName>
    <label>Custom Detail Link</label>
    <type>Url</type>
</CustomField>