force-app/main/default/objects/Knowledge__kav/fields/Documentation_Details__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Details__c</fullName>
    <description>Description of the documents that are being posted.</description>
    <label>Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>