force-app/main/default/objects/Knowledge__kav/fields/Expiration_Version__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Version__c</fullName>
    <label>Expiration Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>