force-app/main/default/objects/Knowledge__kav/fields/Internal_Information__c.field-meta.xml
<CustomField>
    <fullName>Internal_Information__c</fullName>
    <label>Internal Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>