force-app/main/default/objects/Knowledge__kav/fields/Product_Application__c.field-meta.xml
<CustomField>
    <fullName>Product_Application__c</fullName>
    <label>Product/Application</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product</valueSetName>
    </valueSet>
</CustomField>