force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_Author__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_Author__c</fullName>
    <description>The author of the article.</description>
    <label>Author</label>
    <length>40</length>
    <type>Text</type>
</CustomField>