force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_BGCF_Stateful_10__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_BGCF_Stateful_10__c</fullName>
    <description>The version of the BGCF-Stateful.</description>
    <label>BGCF-Stateful Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>