force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_BGCF_Stateless_7__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_BGCF_Stateless_7__c</fullName>
    <description>The version of the BGCF-Stateless</description>
    <label>BGCF-Stateless Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>