force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_CNAM_Broker_Ve24__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_CNAM_Broker_Ve24__c</fullName>
    <description>The version of CNAM-Broker</description>
    <label>CNAM-Broker Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>