force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_Data_Feed_Versi8__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_Data_Feed_Versi8__c</fullName>
    <description>The version of the Data Feed</description>
    <label>Data Feed Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>