force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_Description__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_Description__c</fullName>
    <description>Symptoms, errors, or alarms the customer is experiencing.</description>
    <label>Description</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>