force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_DIAMETER_FW_Ve26__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_DIAMETER_FW_Ve26__c</fullName>
    <description>The version of the DIAMETER-FW</description>
    <label>DIAMETER-FW Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>