force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_Diameter_Trans32__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_Diameter_Trans32__c</fullName>
    <description>The version of the Diameter Transformation.</description>
    <label>Diameter Transformation Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>