force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_ENUM_DNS_Versi13__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_ENUM_DNS_Versi13__c</fullName>
    <description>The version of the ENUM-DNS</description>
    <label>ENUM-DNS Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>