force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_ENUM_Messaging12__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_ENUM_Messaging12__c</fullName>
    <description>The version of the ENUM Messaging.</description>
    <label>ENUM_Messaging Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>