force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_Environment__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_Environment__c</fullName>
    <description>The location of where the article information is targeted towards (lab/production).</description>
    <label>Environment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>