force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_Expiration_Cri27__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_Expiration_Cri27__c</fullName>
    <description>Article expires when compatible versions are end of life or when patch is installed.</description>
    <label>Expiration Criteria</label>
    <length>200</length>
    <type>Text</type>
</CustomField>