force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_Expiration_Date__c</fullName>
    <description>The date the article will be expiring.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>