force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_HTTP_REST_Vers31__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_HTTP_REST_Vers31__c</fullName>
    <description>The version of the HTTP/REST.</description>
    <label>HTTP/REST Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>