force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_IN_SCP_Version__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_IN_SCP_Version__c</fullName>
    <description>The version of the IN_SCP.</description>
    <label>IN_SCP Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>