force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_OS_Version_Nam19__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_OS_Version_Nam19__c</fullName>
    <description>The version of the OS and Name of the OS.</description>
    <label>OS Version/Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>