force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_OSR_Version__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_OSR_Version__c</fullName>
    <description>The version of the OSR.</description>
    <label>OSR Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>