force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_Other__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_Other__c</fullName>
    <description>List of other applications if not already listed.</description>
    <label>Other</label>
    <length>20</length>
    <type>Text</type>
</CustomField>