force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_Other_Version__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_Other_Version__c</fullName>
    <description>The other applications versions.</description>
    <label>Other Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>