force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_Protocol_IWF_Ve2__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_Protocol_IWF_Ve2__c</fullName>
    <description>The version of the Protocol_IWF.</description>
    <label>Protocol_IWF Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>