force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_Provisioning_V15__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_Provisioning_V15__c</fullName>
    <description>The version of the Provisioning.</description>
    <label>Provisioning Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>