force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_Reviewer__c</fullName>
    <description>The person who reviewed the article.</description>
    <label>Reviewer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>