force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_Security_Patch33__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_Security_Patch33__c</fullName>
    <description>The level of the security patch.</description>
    <label>Security Patch Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>