force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_SGF_ATF_Versio11__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_SGF_ATF_Versio11__c</fullName>
    <description>The version of the SGF-ATF.</description>
    <label>SGF-ATF Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>