force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_SIP_Redirect_Ve1__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_SIP_Redirect_Ve1__c</fullName>
    <description>The version of the SIP-Redirect.</description>
    <label>SIP-Redirect Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>