force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_SRP_Stateful_V17__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_SRP_Stateful_V17__c</fullName>
    <description>The version of the SRP-Stateful.</description>
    <label>SRP-Stateful Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>