force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_SRP_Stateless_49__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_SRP_Stateless_49__c</fullName>
    <description>The version of the SRP-Stateless.</description>
    <label>SRP-Stateless Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>