force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_SS7_FW_Version__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_SS7_FW_Version__c</fullName>
    <description>The version of the SS7-FW.</description>
    <label>SS7-FW Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>