force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_SS7_Routing_Ver5__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_SS7_Routing_Ver5__c</fullName>
    <description>The version of the SS7_Routing.</description>
    <label>SS7_Routing Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>