force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_STA_Version__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_STA_Version__c</fullName>
    <description>The version of the STA.</description>
    <label>STA Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>