force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_TITAN_Version__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_TITAN_Version__c</fullName>
    <description>The version of the Applicable TITAN.</description>
    <label>Applicable TITAN Version</label>
    <length>200</length>
    <type>Text</type>
</CustomField>