force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_UT_Proxy_AP_Ve42__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_UT_Proxy_AP_Ve42__c</fullName>
    <description>The version of the UT Proxy-AP.</description>
    <label>UT Proxy-AP Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>