force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_UT_Proxy_BSF_Ve4__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_UT_Proxy_BSF_Ve4__c</fullName>
    <description>The version of the UT Proxy-BSF.</description>
    <label>UT Proxy - BSF Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>