force-app/main/default/objects/Knowledge__kav/fields/Support_Troubleshooting_Validation_Dat46__c.field-meta.xml
<CustomField>
    <fullName>Support_Troubleshooting_Validation_Dat46__c</fullName>
    <description>The date the article/fix was validated.</description>
    <label>Validation Date</label>
    <type>Date</type>
</CustomField>