force-app/main/default/objects/Knowledge__kav/fields/Visible_To__c.field-meta.xml
<CustomField>
    <fullName>Visible_To__c</fullName>
    <label>Visible To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>