force-app/main/default/objects/Knowledge__kav/recordTypes/Documentation.recordType-meta.xml
<RecordType>
    <fullName>Documentation</fullName>
    <active>true</active>
    <label>Documentation</label>
</RecordType>