force-app/main/default/objects/Knowledge__kav/recordTypes/Support_Troubleshooting.recordType-meta.xml
<RecordType>
    <fullName>Support_Troubleshooting</fullName>
    <active>true</active>
    <label>Support Troubleshooting</label>
</RecordType>