force-app/main/default/objects/Knowledge__kav/validationRules/Author_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Author_is_Required</fullName>
    <active>true</active>
    <description>Author is Required</description>
    <errorConditionFormula>LEN( Support_Troubleshooting_Author__c )=0 &amp;&amp; RecordType.DeveloperName = &quot;Support Troubleshooting&quot;</errorConditionFormula>
    <errorMessage>Author is Required</errorMessage>
</ValidationRule>