force-app/main/default/objects/Knowledge__kav/validationRules/Description_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_is_Required</fullName>
    <active>true</active>
    <description>Description is Required</description>
    <errorConditionFormula>LEN(Support_Troubleshooting_Description__c)=0 &amp;&amp; RecordType.DeveloperName = &quot;Support Troubleshooting&quot;</errorConditionFormula>
    <errorMessage>Description is Required</errorMessage>
</ValidationRule>