force-app/main/default/objects/Knowledge__kav/validationRules/Summary_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Summary_is_Required</fullName>
    <active>true</active>
    <description>Summary is Required</description>
    <errorConditionFormula>LEN(Summary)=0 &amp;&amp; RecordType.DeveloperName = &quot;Support Troubleshooting&quot;</errorConditionFormula>
    <errorMessage>Summary field is used for searching. Must be populated.</errorMessage>
</ValidationRule>