force-app/main/default/objects/Knowledge__kav/listViews/Articles_Submitted_for_Approval.listView-meta.xml
<ListView>
    <fullName>Articles_Submitted_for_Approval</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>OWNER_ID</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1,2,3</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Support_Troubleshooting</value>
    </filters>
    <filters>
        <field>Submitted_for_Approval__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Articles Submitted for Approval</label>
</ListView>