force-app/main/default/objects/Knowledge__kav/listViews/Expired_Support_Troubleshooting_Artices.listView-meta.xml
<ListView>
    <fullName>Expired_Support_Troubleshooting_Artices</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>Support_Troubleshooting_Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1,2,3</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Support_Troubleshooting</value>
    </filters>
    <filters>
        <field>Support_Troubleshooting_Expiration_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Expired Support Troubleshooting Artices</label>
</ListView>