force-app/main/default/objects/Knowledge__kav/listViews/My_Draft_Articles.listView-meta.xml
<ListView>
    <fullName>My_Draft_Articles</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <label>My Draft Articles</label>
</ListView>