force-app/main/default/objects/Knowledge__kav/listViews/Support_Troubleshooting_Articles.listView-meta.xml
<ListView>
    <fullName>Support_Troubleshooting_Articles</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>LANGUAGE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1,2,3</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Support_Troubleshooting</value>
    </filters>
    <label>Support Troubleshooting Articles</label>
</ListView>